--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -1337,11 +1337,17 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .right-4 {
+    right: calc(var(--spacing) * 4);
+  }
   .left-full {
     left: 100%;
   }
   .z-40 {
     z-index: 40;
+  }
+  .z-50 {
+    z-index: 50;
   }
   .container {
     width: 100%;
