Update AppLayout and Sidebar templates to include path parameter for improved navigation. Enhance Dashboard template to pass the current path. Modify CSS for better styling, adding new utility classes and refining existing ones. Implement logout functionality in AuthService and add corresponding route for session management.

--- a/cmd/web/app_layout.templ
+++ b/cmd/web/app_layout.templ
@@ -3,10 +3,10 @@ package web
 import "panel.go/cmd/web/deps"
 import "panel.go/internal/resource/user_resource"
 
-templ AppLayout(csrfToken string, title string, locale string, user *user_resource.UserResource) {
+templ AppLayout(csrfToken string, title string, locale string, user *user_resource.UserResource, path string) {
     @Base(csrfToken, title, locale) {
         @deps.Dialog()
-        @deps.Sidebar(user)
+        @deps.Sidebar(user, path)
         @deps.Header()
         <main class="py-10 lg:pl-72">
             <div class="px-4 sm:px-6 lg:px-8">
