--- a/cmd/web/deps/sidebar.templ
+++ b/cmd/web/deps/sidebar.templ
@@ -4,7 +4,8 @@ import "panel.go/internal/resource/user_resource"
 
 var sidebarHandle = templ.NewOnceHandle()
 
-templ Sidebar(user *user_resource.UserResource) {
+
+templ Sidebar(user *user_resource.UserResource, path string) {
     @sidebarHandle.Once() {
         <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col dark:bg-black">
             <!-- Sidebar component, swap this element with another sidebar if you like -->
@@ -15,25 +16,30 @@ templ Sidebar(user *user_resource.UserResource) {
             <nav class="flex flex-1 flex-col">
                 <ul role="list" class="flex flex-1 flex-col gap-y-7">
                 <li>
-                    <ul role="list" class="-mx-2 space-y-1">
+                    <ul role="list" class="-mx-2 space-y-1 menu w-full">
                     <li>
-                        <!-- Current: "bg-gray-50 dark:bg-white/5 text-indigo-600 dark:text-white", Default: "text-gray-700 dark:text-gray-400 hover:text-indigo-600 dark:hover:text-white hover:bg-gray-50 dark:hover:bg-white/5" -->
-                        <a href="#" class="group flex gap-x-3 rounded-md bg-gray-50 p-2 text-sm/6 font-semibold text-indigo-600 dark:bg-white/5 dark:text-white">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 shrink-0 text-indigo-600 dark:text-white">
-                            <path d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
+                        <a href="/dashboard" class={templ.KV("menu-active", path == "/dashboard")}>
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class={templ.KV("text-primary-content", path == "/dashboard"), "size-6 shrink-0 text-primary"}>
+                                <path d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
                         Dashboard
                         </a>
                     </li>
                     </ul>
                 </li>
                 <li class="-mx-6 mt-auto flex items-center relative">
-                    <a href="#" class="flex items-center w-full gap-x-4 px-6 py-3 text-sm/6 font-semibold text-gray-900 hover:bg-gray-50 dark:text-white dark:hover:bg-white/5">
+                    <a href="/hesabim" class="flex items-center justify-start py-6 rounded-none border-0 border-t text-sm/6 text-left btn btn-block">
                         <img src={user.Avatar} alt="" class="size-8 rounded-full bg-gray-50 outline -outline-offset-1 outline-black/5 dark:bg-gray-800 dark:outline-white/10" />
                         <span class="sr-only">Hesabım</span>
                         <span aria-hidden="true">{user.Name}</span>
                     </a>
-                    <button onclick="alert('test')" class="text-gray-900 dark:text-white z-50 absolute right-4">
+                    <button 
+                        class="btn btn-square z-50 absolute right-6"
+                        title="Çıkış Yap"
+                        hx-delete="/logout"
+                        hx-target="closest li"
+                        hx-swap="outerHTML"
+                    >
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out-icon lucide-log-out"><path d="m16 17 5-5-5-5"/><path d="M21 12H9"/><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/></svg>
                     </button>
                 </li>
