--- a/cmd/web/app_layout.templ
+++ b/cmd/web/app_layout.templ
@@ -5,9 +5,9 @@ import "panel.go/internal/resource/user_resource"
 
 templ AppLayout(csrfToken string, title string, locale string, user *user_resource.UserResource, path string) {
     @Base(csrfToken, title, locale) {
-        @deps.Dialog()
+        @deps.Dialog(path)
         @deps.Sidebar(user, path)
-        @deps.Header()
+        @deps.Header(user)
         <main class="py-10 lg:pl-72">
             <div class="px-4 sm:px-6 lg:px-8">
                 { children... }
