--- a/cmd/web/deps/sidebar.templ
+++ b/cmd/web/deps/sidebar.templ
@@ -10,22 +10,11 @@ templ Sidebar(user *user_resource.UserResource, path string) {
         <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col dark:bg-black">
             <!-- Sidebar component, swap this element with another sidebar if you like -->
             <div class="flex grow flex-col gap-y-5 overflow-y-auto border-r border-gray-200 bg-white px-6 dark:border-white/10 dark:bg-black/10">
-            <div class="flex h-16 shrink-0 items-center">
-                <h1>Panel</h1>
-            </div>
+            @Logo()
             <nav class="flex flex-1 flex-col">
                 <ul role="list" class="flex flex-1 flex-col gap-y-7">
                 <li>
-                    <ul role="list" class="-mx-2 space-y-1 menu w-full">
-                    <li>
-                        <a href="/dashboard" class={templ.KV("menu-active", path == "/dashboard")}>
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class={templ.KV("text-primary-content", path == "/dashboard"), "size-6 shrink-0 text-primary"}>
-                                <path d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        Dashboard
-                        </a>
-                    </li>
-                    </ul>
+                    @Menu(path)
                 </li>
                 <li class="-mx-6 mt-auto flex items-center relative">
                     <a href="/hesabim" class="flex items-center justify-start py-6 rounded-none border-0 border-t text-sm/6 text-left btn btn-block">
@@ -33,15 +22,7 @@ templ Sidebar(user *user_resource.UserResource, path string) {
                         <span class="sr-only">Hesabım</span>
                         <span aria-hidden="true">{user.Name}</span>
                     </a>
-                    <button 
-                        class="btn btn-square z-50 absolute right-6"
-                        title="Çıkış Yap"
-                        hx-delete="/logout"
-                        hx-target="closest li"
-                        hx-swap="outerHTML"
-                    >
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out-icon lucide-log-out"><path d="m16 17 5-5-5-5"/><path d="M21 12H9"/><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/></svg>
-                    </button>
+                    @Logout(true)
                 </li>
                 </ul>
             </nav>
