--- a/cmd/web/deps/account_aside.templ
+++ b/cmd/web/deps/account_aside.templ
@@ -11,20 +11,20 @@ templ AccountAside(path string) {
 			</a>
 		</li>
 		<li>
-			<a href="/guvenlik">
-				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class={ templ.KV("text-base-content/50", path != "/guvenlik"), templ.KV("text-base-content", path == "/guvenlik"), "size-6 shrink-0"}>
+			<a href="/guvenlik" class={ templ.KV("menu-active", path == "/guvenlik") }>
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class={ templ.KV("text-primary", path != "/guvenlik"), templ.KV("text-primary-content", path == "/guvenlik"), "size-6 shrink-0"}>
 					<path d="M7.864 4.243A7.5 7.5 0 0 1 19.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 0 0 4.5 10.5a7.464 7.464 0 0 1-1.15 3.993m1.989 3.559A11.209 11.209 0 0 0 8.25 10.5a3.75 3.75 0 1 1 7.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 0 1-3.6 9.75m6.633-4.596a18.666 18.666 0 0 1-2.485 5.33" stroke-linecap="round" stroke-linejoin="round"></path>
 				</svg>
 				Güvenlik
 			</a>
 		</li>
-		<li>
-			<a href="/bildirimler">
-				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class={ templ.KV("text-base-content/50", path != "/bildirimler"), templ.KV("text-base-content", path == "/bildirimler"), "size-6 shrink-0"}>
-					<path d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" stroke-linecap="round" stroke-linejoin="round"></path>
-				</svg>
-				Bildirimler
-			</a>
-		</li>
+		// <li>
+		// 	<a href="/bildirimler" class={ templ.KV("menu-active", path == "/bildirimler") }>
+		// 		<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class={ templ.KV("text-primary", path != "/bildirimler"), templ.KV("text-primary-content", path == "/bildirimler"), "size-6 shrink-0"}>
+		// 			<path d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" stroke-linecap="round" stroke-linejoin="round"></path>
+		// 		</svg>
+		// 		Bildirimler
+		// 	</a>
+		// </li>
 	</ul>
 }
